--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,6 +1,5 @@
 click==8.1.3  # CLI library for Python
 cryptography==41.0.3  # For encryption
 requests==2.31.0  # For making HTTP requests (if needed)
+textual==1.0.0
 rich
-textual
-textual_inputs
